--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -33,12 +38,14 @@
 </div>
 <body>
 <div>
-  <h1 class="text-center"> Saddity</h1>
+  <h1 class="text-center animate__animated animate__tada"> Saddity</h1>
   <p class="text-center"> your opinions matter.</p>
-  <p>The .container class provides a responsive fixed width container.</p>
   <div class="card" style="width: 29rem;">
-    <img src="logo.jpg" class="card-ing-top" alt="saddity logo">
+    <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__pulse" alt="saddity logo">
 </div>
-
+<br>
+<span class="border border-secondary border border-5 rounded-pill">About us</span><br><br>
+<div class="p-3 bg-info bg-opacity-10 border border-info border-start-0 rounded-end rounded ">
+<p>This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices. </p>
 </body>
 </html>
