--- a/blog.html
+++ b/blog.html
@@ -219,12 +219,11 @@
     <div class="col p-4 d-flex flex-column position-static">
       <strong class="d-inline-block mb-2 text-primary">World</strong>
       <h3 class="mb-0 animate__animated animate__zoomIn">Release Date</h3>
-      <div class="mb-1 text-body-secondary">Nov 12</div>
-      <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="stretched-link">Continue reading</a>
+      <div class="mb-1 text-body-secondary">Mar 31</div>
+      <p class="card-text mb-auto">Palm Angels Reinterprets Barbour's Bedale Wax Jacket in Bold Colors</p>
     </div>
     <div class="col-auto d-none d-lg-block">
-      <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+ <img src="palm-angels-barbour-bedale-wax-jacket-release-date-1.jpg" class="bd-placeholder-img" width="200" height="250">
     </div>
   </div>
 </div>
@@ -233,17 +232,49 @@
     <div class="col p-4 d-flex flex-column position-static">
       <strong class="d-inline-block mb-2 text-success">Fashion Trends</strong>
       <h3 class="mb-0 animate__animated animate__zoomIn">Coming to you with the latest...</h3>
-      <div class="mb-1 text-body-secondary"></div>
-      <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="stretched-link">Continue reading</a>
+
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img style="width:100px;"src="images.jpg" class="d-block w-100 rounded float-start" alt="stacked jeans">
+            <div class="carousel-caption d-none d-md-block">
+              <p class="text-black">STACKED JEANS</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images-1.jpg" class="d-block w-100 rounded float-start" alt="fitted hoodie">
+            <div class="carousel-caption d-none d-md-block">
+              <p class="text-black">FITTED HOODIES</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="download-2.jpg" class="d-block w-100 rounded float-start" alt="maxi denim SKIRT">
+            <div class="carousel-caption d-none d-md-block">
+              <p>MAXI DENIM SKIRT</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
     <div class="col-auto d-none d-lg-block">
-      <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+      <img src="fashion.jpg" class="bd-placeholder-img rounded float-start" width="200" height="250" alt="">
     </div>
   </div>
 </div>
 </div>
-
 <div class="row g-5">
 <div class="col-md-8">
   <h3 class="pb-4 mb-4 fst-italic border-bottom">
