--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
     <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__pulse" alt="saddity logo">
 </div>
 <br>
-<span class="border border-secondary border border-5 rounded-pill">About us</span><br><br>
-<div class="p-3 bg-info bg-opacity-10 border border-info border-start-0 rounded-end rounded ">
-<p>This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices. </p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5  style= "text-decoration: overline;"class="card-title">ABOUT US</h5>
+    <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices. </p>
+  </div>
+</div>
 </body>
 </html>
