--- a/comments.html
+++ b/comments.html
@@ -10,7 +10,7 @@
 </head>
 <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid"></div>
     <a class="navbar-brand" href="#">Saddity</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -33,14 +33,23 @@
   </nav>
 </div>
 <body>
-<div>
-<body>
-
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This part is inside a .container class.</p>
-  <p>The .container class provides a responsive fixed width container.</p>
-</div>
-
+  <div>
+  <h2 class="text-center">COMMENT SECTION</h2>
+  <br>
+  <div class="input-group flex-nowrap input-group-sm mb-3">
+    <span class="input-group-text" id="addon-wrapping">@</span>
+    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+  </div>
+  </div>
+  <br>
+  <div class="input-group input-group-sm mb-3">
+    <span class="input-group-text col-lg-2">First and last name</span>
+    <input type="text" aria-label="First name" class="form-control">
+    <input type="text" aria-label="Last name" class="form-control">
+  </div>
+  <div class="input-group">
+    <span class="input-group-text">comments</span>
+    <textarea class="form-control" aria-label="With textarea"></textarea>
+  </div>
 </body>
 </html>
