--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="stylesheet.css">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="#">Saddity</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+    <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="index.html">home</a>
+    </li>
+    <li>
+    <a class="nav-link" href="blog.html">blog</a>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="comments.html">comments</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html">contact</a>
+    </ul>
+    </div>
+  </nav>
+</div>
 </head>
 <body>
-
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This part is inside a .container class.</p>
-  <p>The .container class provides a responsive fixed width container.</p>
-</div>
-
+  <div>
+    <h3 class="text-center">Contact Me</h3>
+  </div>
+<form
+action="https://us-central1-steam-center-app-dev.cloudfunctions.net/formToEmail"
+method="post">
+<p class="text-center">
+  <label for="input">First Name</label>
+  <input type="text" id="input" placeholder="Example input">
+  </p>
+  <p class="text-center">
+    <label for="input">Last Name</label>
+    <input type="text" id="input" placeholder="Example input">
+  </p>
+  <p class="text-center">
+    <label for="input">Telephone Number</label>
+    <input type="text" id="input" placeholder="Example input">
+  </p>
+  <p class="text-center">
+      <label for="textarea">Comment</label>
+      <textarea id="textarea" rows="3"></textarea>
+    </p>
+  <p class="text-center">
+    <label for="select">Reply Options</label>
+    <select id="select">
+      <option value="">Choose</option>
+      <optgroup label="Option group 1">
+        <option value="">Email</option>
+        <option value="">Personal Messaging</option>
+        <option value="">Telephone #</option>
+      </optgroup>
+    </select>
+  </p>
+  <p class="text-center">
+  <button type="submit">submit</button>
+  </form>
 </body>
 </html>
