--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid"></div>
     <a class="navbar-brand" href="#">Saddity</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -40,14 +40,14 @@
 <div>
   <h1 class="text-center animate__animated animate__tada"> Saddity</h1>
   <p class="text-center"> your opinions matter.</p>
-  <div class="card" style="width: 29rem;">
+  <div class="card mx-auto" style="width: 29rem;">
     <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__pulse" alt="saddity logo">
 </div>
 <br>
-<div class="card" style="width: 18rem;">
+<div class="card w-50 mx-auto">
   <div class="card-body">
-    <h5  style= "text-decoration: overline;"class="card-title">ABOUT US</h5>
-    <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices. </p>
+    <h5 class="card-title">ABOUT US</h5>
+    <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices.</p>
   </div>
 </div>
 </body>
