--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,6 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -20,6 +19,7 @@
 <meta name="theme-color" content="#712cf9">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Blog|Saddity</title>
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -217,7 +217,7 @@
 <div class="col-md-6">
   <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
     <div class="col p-4 d-flex flex-column position-static">
-      <strong class="d-inline-block mb-2 text-primary">World</strong>
+      <strong class="d-inline-block mb-2">World</strong>
       <h3 class="mb-0 animate__animated animate__zoomIn">Release Date</h3>
       <div class="mb-1 text-body-secondary">Mar 31</div>
       <p class="card-text mb-auto">Palm Angels Reinterprets Barbour's Bedale Wax Jacket in Bold Colors</p>
@@ -230,7 +230,7 @@
 <div class="col-md-6">
   <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
     <div class="col p-4 d-flex flex-column position-static">
-      <strong class="d-inline-block mb-2 text-success">Fashion Trends</strong>
+      <strong class="d-inline-block mb-2">Fashion Trends</strong>
       <h3 class="mb-0 animate__animated animate__zoomIn">Coming to you with the latest...</h3>
     </div>
     <div class="col-auto d-none d-lg-block">
@@ -276,22 +276,24 @@
 <div class="row g-5">
 <div class="col-md-8">
   <h3 class="pb-4 mb-4 fst-italic border-bottom">
-    From the Firehose
+    ....
   </h3>
 
   <article class="blog-post">
-    <h2 class="blog-post-title mb-1">Sample blog post</h2>
-    <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
+    <h2 class="blog-post-title mb-1">BLOG POST</h2>
+    <p class="blog-post-meta">March 30, 2023</a></p>
 
-    <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+    <h2 id="klutch">Rich Paul Annouces a New Sportswear Brand collabing with New Balance.</h2>
     <hr>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+    <p>Beginning in December of 2021 both Rich worked on a New Balance 550 that blow the market and sold out quick, putting Paul on the radar. Klutch Athletics is more than just an ordinary collabaration, it's to catch the eyes of athletes throughtout the athletic journey.</p>
+    <img src="new-balance-klutch-athletics-rich-paul-8.jpg" alt="Klutch Athletics" height="300" width="500">
     <h2>Blockquotes</h2>
     <p>This is an example blockquote in action:</p>
     <blockquote class="blockquote">
-      <p>Quoted text goes here.</p>
+      <p id="nike"></p>Nike Pacing Revolutionizes Apparel Creation, Fowarding Sustainability Efforts </p>
     </blockquote>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+    <p>NKIE.Inc has been obsessed with innovation, although it's had it's fair share of scandals over the last years. Nike has explored to deliver products that require less non-virigin materials and carbon-production without sacrifcing their performance.</p>
+    <img src="Nike-Forward-Grey-Sweater-2022-9.jpg" alt="nike grey sweater" height="300" width="490">
     <h3>Example lists</h3>
     <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
     <ul>
