--- a/comments.html
+++ b/comments.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+<title>Comments|Saddity</title>
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <div class="container">
@@ -34,7 +39,7 @@
 </div>
 <body>
   <div>
-  <h2 class="text-center">COMMENT SECTION</h2>
+  <h2 class="text-center animate__animated animate__tada">COMMENT SECTION</h2>
   <br>
   <div class="input-group flex-nowrap input-group-sm mb-3">
     <span class="input-group-text" id="addon-wrapping">@</span>
