--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="stylesheet.css">
+  <title>Contact|Saddity</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -41,15 +43,15 @@ action="https://us-central1-steam-center-app-dev.cloudfunctions.net/formToEmail"
 method="post">
 <p class="text-center">
   <label for="input">First Name</label>
-  <input type="text" id="input" placeholder="Example input">
+  <input type="text" id="input">
   </p>
   <p class="text-center">
     <label for="input">Last Name</label>
-    <input type="text" id="input" placeholder="Example input">
+    <input type="text" id="in">
   </p>
   <p class="text-center">
     <label for="input">Telephone Number</label>
-    <input type="text" id="input" placeholder="Example input">
+    <input type="text" id="put">
   </p>
   <p class="text-center">
       <label for="textarea">Comment</label>
@@ -68,6 +70,9 @@ method="post">
   </p>
   <p class="text-center">
   <button type="submit">submit</button>
+  <input name="send-to" value="cbeckford2@brooklynsteamcenter.org" hidden>
   </form>
+  <a href="mailto:cbeckford2@brooklynsteamcenter.org">
+    <i class="fa fa-envelope-square" style="font-size:60px;color:#7A95FF;">
 </body>
 </html>
