--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <title>Home|Saddity</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <div class="container">
