--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
@@ -19,6 +18,14 @@
 <meta name="theme-color" content="#712cf9">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<script>
+        var wow = new WOW({
+            boxClass:     'wow',
+            animateClass: 'animate__animated'
+        })
+        wow.init();
+</script>
   <title>Blog|Saddity</title>
   <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -198,7 +205,7 @@
 
 <div class="nav-scroller py-1 mb-2">
 <nav class="nav d-flex justify-content-between">
-  <a class="p-2 link-dark" href="#">prices</a>
+  <a class="p-2 link-dark" href="#">Prices</a>
   <a class="p-2 link-dark" href="#">Recent Drops</a>
   <a class="p-2 link-dark" href="#">Lastest trends</a>
 </nav>
@@ -208,8 +215,8 @@
 <main class="container">
 <div class="p-4 p-md-5 mb-4 rounded text-bg-light animate__animated animate__jackInTheBox">
 <div class="col-md-6 px-0">
-  <h1 class="display-4 fst-italic">BLOG</h1>
-  <p class="lead my-3">Follow up on the lastes purchases, prices, trends, and more!</p>
+  <h1 id="top" class="display-4 fst-italic">BLOG</h1>
+  <p id="pair" class="lead my-3">Follow up on the lastes purchases, prices, trends, and more!</p>
 </div>
 </div>
 
