--- a/comments.html
+++ b/comments.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+<script>
+        var wow = new WOW({
+            boxClass:     'wow',
+            animateClass: 'animate__animated'
+        })
+        wow.init();
+</script>
 <title>Comments|Saddity</title>
   <link rel="stylesheet" href="stylesheet.css">
 </head>
@@ -41,20 +48,40 @@
   <div>
   <h2 class="text-center animate__animated animate__tada">COMMENT SECTION</h2>
   <br>
-  <div class="input-group flex-nowrap input-group-sm mb-3">
-    <span class="input-group-text" id="addon-wrapping">@</span>
-    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+  <p class="text-center">Here is were you comment you opinions! In the comments area please remember to specify the brand your are talking about!<3
+  </p>
+  <div class="col-sm-6">
+    <label for="firstName" class="form-label">First name</label>
+    <input type="text" class="form-control" id="firstName" placeholder="John" value="" required>
+    <div class="invalid-feedback">
+      Valid first name is required.
+    </div>
   </div>
-  </div>
+
+  <div class="col-sm-6">
+    <label for="lastName" class="form-label">Last name</label>
+    <input type="text" class="form-control" id="lastName" placeholder="Doe" value="" required>
+    <div class="invalid-feedback">
+      Valid last name is required.
+    </div>
   <br>
-  <div class="input-group input-group-sm mb-3">
-    <span class="input-group-text col-lg-2">First and last name</span>
-    <input type="text" aria-label="First name" class="form-control">
-    <input type="text" aria-label="Last name" class="form-control">
-  </div>
   <div class="input-group">
-    <span class="input-group-text">comments</span>
+    <span class="input-group-text">Comments</span>
     <textarea class="form-control" aria-label="With textarea"></textarea>
   </div>
+  <br>
+  <h6 class="mb-3">Would you like your name to be anonymous?</h6>
+
+          <div class="my-3">
+            <div class="form-check">
+              <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
+              <label class="form-check-label" for="credit">yes</label>
+            </div>
+            <div class="form-check">
+              <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
+              <label class="form-check-label" for="debit">no</label>
+            </div>
+          </div>
+
 </body>
 </html>
