--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="stylesheet.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <title>Contact|Saddity</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<script>
+        var wow = new WOW({
+            boxClass:     'wow',
+            animateClass: 'animate__animated'
+        })
+        wow.init();
+</script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -36,7 +48,13 @@
 </head>
 <body>
   <div>
-    <h3 class="text-center">Contact Me</h3>
+  <section>
+ <section class=" text-center wow animate__lightSpeedInLeft">
+    <h3>Contact Me</h3>
+    </section>
+
+  <p class="text-center">You can contact me if your having any comments, questions, or concerns!!</p>
+  </section>
   </div>
 <form
 action="https://us-central1-steam-center-app-dev.cloudfunctions.net/formToEmail"
@@ -62,17 +80,22 @@ method="post">
     <select id="select">
       <option value="">Choose</option>
       <optgroup label="Option group 1">
-        <option value="">Email</option>
-        <option value="">Personal Messaging</option>
-        <option value="">Telephone #</option>
+        <option value="">email</option>
+        <option value="">personal messaging</option>
+        <option value="">telephone #</option>
       </optgroup>
     </select>
   </p>
   <p class="text-center">
   <button type="submit">submit</button>
   <input name="send-to" value="cbeckford2@brooklynsteamcenter.org" hidden>
+  </p>
   </form>
   <a href="mailto:cbeckford2@brooklynsteamcenter.org">
+    email
     <i class="fa fa-envelope-square" style="font-size:60px;color:#7A95FF;">
+      </i>
+      </a>
+    </p>
 </body>
 </html>
