--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <title>Home|Saddity</title>
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<script>
+        var wow = new WOW({
+            boxClass:     'wow',
+            animateClass: 'animate__animated'
+        })
+        wow.init();
+</script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheet.css">
+    <title>Home|Saddity</title>
   </head>
+  <body>
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid"></div>
@@ -36,19 +44,25 @@
     </ul>
     </div>
   </nav>
-</div>
-<body>
 <div>
-  <h1 class="text-center animate__animated animate__tada"> Saddity</h1>
-  <p class="text-center"> your opinions matter.</p>
+  <section>
+    <section class=" text-center wow animate__tada">
+     <h2>Saddity</h2>
+   </section>
+  
+   <section class=" text-center wow animate__bounceIn">
+      <h5>your opinions matter .</h5>
+   </section>
   <div class="card mx-auto" style="width: 29rem;">
-    <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__pulse" alt="saddity logo">
+    <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__pulse" alt="saddity logo"> 
 </div>
+</section>
 <br>
 <div class="card w-50 mx-auto">
   <div class="card-body">
     <h5 class="card-title">ABOUT US</h5>
-    <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices.</p>
+    <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices.</p> 
+   <i class="fa fa-hand-peace-o" style="font-size: 30px;"></i>
   </div>
 </div>
 </body>
