--- a/comments.html
+++ b/comments.html
@@ -7,9 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+>
 <script>
         var wow = new WOW({
             boxClass:     'wow',
@@ -50,7 +50,7 @@
   <br>
   <p class="text-center">Here is were you comment you opinions! In the comments area please remember to specify the brand your are talking about!<3
   </p>
-  <div class="col-sm-6">
+  <div class="col-lg-4 col-sm-4">
     <label for="firstName" class="form-label">First name</label>
     <input type="text" class="form-control" id="firstName" placeholder="John" value="" required>
     <div class="invalid-feedback">
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <div class="col-sm-6">
+  <div class="col-lg-4 col-sm-4">
     <label for="lastName" class="form-label">Last name</label>
     <input type="text" class="form-control" id="lastName" placeholder="Doe" value="" required>
     <div class="invalid-feedback">
@@ -72,16 +72,15 @@
   <br>
   <h6 class="mb-3">Would you like your name to be anonymous?</h6>
 
-          <div class="my-3">
-            <div class="form-check">
-              <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-              <label class="form-check-label" for="credit">yes</label>
-            </div>
-            <div class="form-check">
-              <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-              <label class="form-check-label" for="debit">no</label>
-            </div>
-          </div>
-
+  <div class="my-3">
+<div class="form-check">
+  <input id="flexRadioDefault" name="flexRadioDefault" type="radio" class="form-check-input" required>
+<label class="form-check-label" for="flexRadioDefault">yes</label>
+  </div>
+  <div class="form-check">
+ <input id="flexRadioDefault1" name="flexRadioDefault1" type="radio" class="form-check-input" required>
+<label class="form-check-label" for="flexRadioDefault1">no</label>
+  </div>
+  </div>
 </body>
 </html>
