--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+  >
 <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -34,7 +34,7 @@
 <div class="container">
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container-fluid"></div>
     <a class="navbar-brand" href="#">Saddity</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -293,17 +293,25 @@
     <h2 id="klutch">Rich Paul Annouces a New Sportswear Brand collabing with New Balance.</h2>
     <hr>
     <p>Beginning in December of 2021 both Rich worked on a New Balance 550 that blow the market and sold out quick, putting Paul on the radar. Klutch Athletics is more than just an ordinary collabaration, it's to catch the eyes of athletes throughtout the athletic journey.</p>
-    <img src="new-balance-klutch-athletics-rich-paul-8.jpg" alt="Klutch Athletics" height="300" width="500">
-    <h2>Blockquotes</h2>
-    <p>This is an example blockquote in action:</p>
-    <blockquote class="blockquote">
-      <p id="nike"></p>Nike Pacing Revolutionizes Apparel Creation, Fowarding Sustainability Efforts </p>
+    <img class="wow animate__bounceInUp" src="new-balance-klutch-athletics-rich-paul-8.jpg" alt="Klutch Athletics" height="300" width="500">
+    <hr>
+      <h3 id="nike">Nike Pacing Revolutionizes Apparel Creation, Fowarding Sustainability Efforts </h3>
     </blockquote>
     <p>NKIE.Inc has been obsessed with innovation, although it's had it's fair share of scandals over the last years. Nike has explored to deliver products that require less non-virigin materials and carbon-production without sacrifcing their performance.</p>
-    <img src="Nike-Forward-Grey-Sweater-2022-9.jpg" alt="nike grey sweater" height="300" width="490">
-    <h3>Example lists</h3>
-    <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
+    <hr>
+    <img class="wow animate__bounceInUp" src="Nike-Forward-Grey-Sweater-2022-9.jpg" alt="nike grey sweater" height="300" width="490">
+    <h3 id="creator">Tyler the Creator Collabaration</h3>
+    <p>Tyler the Creator has released once again another collabaration through Golf Wang called the Golf Championship Collection. The collection includes outerwera, accessories, jerseys, t-shirts, sweaters, and more! This collection was released oh January 22nd, 2023 and is now available at the Golf Wang LA Flagship at store and online on the Gang Wang site.</p>
+    <img class="wow animate__bounceInUp" src="tyler.jpg" alt="Tyler the Creator Golf Wang clothing" height="300" width="490">
     <ul>
+      <hr>
+      <div class="card" style="width: 18rem;">
+        <img src="air jordan.jpg" class="card-img-top" alt="Air Jordan 1 Retro High OG Lucky Green>
+        <div class="card-body">
+          <p class="card-text text-success">Colorway: Black/Lucky Green-White<br>Release Date:April 15,2023<br>Price:$180
+          </p>
+        </div>
+      </div>
       <li>First list item</li>
       <li>Second list item with a longer description</li>
       <li>Third list item to close it out</li>
