--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script>
         var wow = new WOW({
@@ -24,7 +24,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid"></div>
-    <a class="navbar-brand" href="#">Saddity</a>
+    <a class="navbar-brand">Saddity</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,25 +45,29 @@
     </div>
   </nav>
 <div>
-  <section>
+  <div>
     <section class=" text-center wow animate__tada">
      <h2>Saddity</h2>
    </section>
+   </div>
   
-   <section class=" text-center wow animate__bounceIn">
+   <div class=" text-center wow animate__bounceIn">
       <h5>your opinions matter .</h5>
-   </section>
+   </div>
   <div class="card mx-auto" style="width: 29rem;">
-    <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__pulse" alt="saddity logo"> 
+    <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__backInUp" alt="saddity logo"> 
 </div>
-</section>
 <br>
 <div class="card w-50 mx-auto">
+  <div>
   <div class="card-body">
-    <h5 class="card-title">ABOUT US</h5>
+    <section class="card-title wow animate animate__rotateIn">
+      <h5>ABOUT US</h5>
+  </section>
+  </div>
     <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices.</p> 
    <i class="fa fa-hand-peace-o" style="font-size: 30px;"></i>
-  </div>
+  </section>
 </div>
 </body>
 </html>
