--- a/comments.html
+++ b/comments.html
@@ -44,11 +44,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </div>
   </nav>
 </div>
-<body>
-  <div>
   <h2 class="text-center animate__animated animate__tada">COMMENT SECTION</h2>
   <br>
-  <p class="text-center">Here is were you comment you opinions! In the comments area please remember to specify the brand your are talking about!<3
+  <p class="text-center">Here is were you comment you opinions! In the comments area please remember to specify the brand your are talking about!
   </p>
   <div class="col-lg-4 col-sm-4">
     <label for="firstName" class="form-label">First name</label>
@@ -80,6 +78,10 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   <div class="form-check">
  <input id="flexRadioDefault1" name="flexRadioDefault1" type="radio" class="form-check-input" required>
 <label class="form-check-label" for="flexRadioDefault1">no</label>
+<p class="text-center">
+  <button type="submit">submit</button>
+  <input name="send-to" value="cbeckford2@brooklynsteamcenter.org" hidden>
+  </p>
   </div>
   </div>
 </body>
