--- a/blog.html
+++ b/blog.html
@@ -30,8 +30,6 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
-<div class="container">
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid"></div>
@@ -46,7 +44,6 @@
     </li>
     <a class="nav-link" href="blog.html">blog</a>
     <a href="blog.html" class="link-primary"></a>
-    </li>
     <li class="nav-item">
     <a class="nav-link" href="comments.html">comments</a>
     </li>
@@ -219,6 +216,7 @@
   <p id="pair" class="lead my-3">Follow up on the lastes purchases, prices, trends, and more!</p>
 </div>
 </div>
+</main>
 
 <div class="row mb-2">
 <div class="col-md-6">
@@ -280,149 +278,36 @@
   </div>
 </div>
 </div>
-<div class="row g-5">
-<div class="col-md-8">
+<div class="row g-5"></div>
+<div class="col-md-8"></div>
   <h3 class="pb-4 mb-4 fst-italic border-bottom">
     ....
   </h3>
 
   <article class="blog-post">
     <h2 class="blog-post-title mb-1">BLOG POST</h2>
-    <p class="blog-post-meta">March 30, 2023</a></p>
-
+    <p class="blog-post-meta">March 30, 2023</p>
+    </article>
     <h2 id="klutch">Rich Paul Annouces a New Sportswear Brand collabing with New Balance.</h2>
     <hr>
     <p>Beginning in December of 2021 both Rich worked on a New Balance 550 that blow the market and sold out quick, putting Paul on the radar. Klutch Athletics is more than just an ordinary collabaration, it's to catch the eyes of athletes throughtout the athletic journey.</p>
     <img class="wow animate__bounceInUp" src="new-balance-klutch-athletics-rich-paul-8.jpg" alt="Klutch Athletics" height="300" width="500">
     <hr>
       <h3 id="nike">Nike Pacing Revolutionizes Apparel Creation, Fowarding Sustainability Efforts </h3>
-    </blockquote>
     <p>NKIE.Inc has been obsessed with innovation, although it's had it's fair share of scandals over the last years. Nike has explored to deliver products that require less non-virigin materials and carbon-production without sacrifcing their performance.</p>
     <hr>
     <img class="wow animate__bounceInUp" src="Nike-Forward-Grey-Sweater-2022-9.jpg" alt="nike grey sweater" height="300" width="490">
     <h3 id="creator">Tyler the Creator Collabaration</h3>
     <p>Tyler the Creator has released once again another collabaration through Golf Wang called the Golf Championship Collection. The collection includes outerwera, accessories, jerseys, t-shirts, sweaters, and more! This collection was released oh January 22nd, 2023 and is now available at the Golf Wang LA Flagship at store and online on the Gang Wang site.</p>
+    <hr>
     <img class="wow animate__bounceInUp" src="tyler.jpg" alt="Tyler the Creator Golf Wang clothing" height="300" width="490">
-    <ul>
       <hr>
-      <div class="card" style="width: 18rem;">
-        <img src="air jordan.jpg" class="card-img-top" alt="Air Jordan 1 Retro High OG Lucky Green>
+      <div class="card text-center card-img-top" style="width: 18rem;">
+        <img src="airjordan.jpg" class="card-img-top" alt="Air Jordan 1 Retro High OG Lucky Green">
         <div class="card-body">
           <p class="card-text text-success">Colorway: Black/Lucky Green-White<br>Release Date:April 15,2023<br>Price:$180
           </p>
         </div>
       </div>
-      <li>First list item</li>
-      <li>Second list item with a longer description</li>
-      <li>Third list item to close it out</li>
-    </ul>
-    <p>And this is an ordered list:</p>
-    <ol>
-      <li>First list item</li>
-      <li>Second list item with a longer description</li>
-      <li>Third list item to close it out</li>
-    </ol>
-    <p>And this is a definition list:</p>
-    <dl>
-      <dt>HyperText Markup Language (HTML)</dt>
-      <dd>The language used to describe and define the content of a Web page</dd>
-      <dt>Cascading Style Sheets (CSS)</dt>
-      <dd>Used to describe the appearance of Web content</dd>
-      <dt>JavaScript (JS)</dt>
-      <dd>The programming language used to build advanced Web sites and applications</dd>
-    </dl>
-    <h2>Inline HTML elements</h2>
-    <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
-    <ul>
-      <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
-      <li><em>To italicize text</em>, use <code class="language-plaintext highlighter-rouge">&lt;em&gt;</code>.</li>
-      <li>Abbreviations, like <abbr title="HyperText Markup Language">HTML</abbr> should use <code class="language-plaintext highlighter-rouge">&lt;abbr&gt;</code>, with an optional <code class="language-plaintext highlighter-rouge">title</code> attribute for the full phrase.</li>
-      <li>Citations, like <cite>— Mark Otto</cite>, should use <code class="language-plaintext highlighter-rouge">&lt;cite&gt;</code>.</li>
-      <li><del>Deleted</del> text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and <ins>inserted</ins> text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.</li>
-      <li>Superscript <sup>text</sup> uses <code class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.</li>
-    </ul>
-    <p>Most of these elements are styled by browsers with few modifications on our part.</p>
-    <h2>Heading</h2>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <h3>Sub-heading</h3>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <pre><code>Example code block</code></pre>
-    <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-  </article>
-
-  <article class="blog-post">
-    <h2 class="blog-post-title mb-1">Another blog post</h2>
-    <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
-
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <blockquote>
-      <p>Longer quote goes here, maybe with some <strong>emphasized text</strong> in the middle of it.</p>
-    </blockquote>
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <h3>Example table</h3>
-    <p>And don't forget about tables in these posts:</p>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Upvotes</th>
-          <th>Downvotes</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Alice</td>
-          <td>10</td>
-          <td>11</td>
-        </tr>
-        <tr>
-          <td>Bob</td>
-          <td>4</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Charlie</td>
-          <td>7</td>
-          <td>9</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td>Totals</td>
-          <td>21</td>
-          <td>23</td>
-        </tr>
-      </tfoot>
-    </table>
-
-    <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-  </article>
-
-  <article class="blog-post">
-    <h2 class="blog-post-title mb-1">New feature</h2>
-    <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
-
-    <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-    <ul>
-      <li>First list item</li>
-      <li>Second list item with a longer description</li>
-      <li>Third list item to close it out</li>
-    </ul>
-    <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-  </article>
-
-  <nav class="blog-pagination" aria-label="Pagination">
-    <a class="btn btn-outline-primary rounded-pill" href="#">Older</a>
-    <a class="btn btn-outline-secondary rounded-pill disabled">Newer</a>
-  </nav>
-
-</div>
-
-<div class="col-md-4">
-  <div class="position-sticky" style="top: 2rem;">
-    <div class="p-4 mb-3 bg-body-tertiary rounded">
-      <h4 class="fst-italic">About</h4>
-      <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
-    </div>
 </body>
 </html>
