--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
         wow.init();
 </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid"></div>
@@ -45,16 +46,13 @@
     </div>
   </nav>
 </div>
-</head>
-<body>
   <div>
-  <section>
+  <div>
  <section class=" text-center wow animate__lightSpeedInLeft">
     <h3>Contact Me</h3>
     </section>
-
+</div>
   <p class="text-center">You can contact me if your having any comments, questions, or concerns!!</p>
-  </section>
   </div>
 <form
 action="https://us-central1-steam-center-app-dev.cloudfunctions.net/formToEmail"
@@ -96,6 +94,5 @@ method="post">
     <i class="fa fa-envelope-square" style="font-size:60px;color:#7A95FF;">
       </i>
       </a>
-    </p>
 </body>
 </html>
