--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Home|Saddity</title>
   </head>
   <body>
-  <div class="container">
+  <div class="container"></div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid"></div>
     <a class="navbar-brand">Saddity</a>
@@ -44,7 +44,6 @@
     </ul>
     </div>
   </nav>
-<div>
   <div>
     <section class=" text-center wow animate__tada">
      <h2>Saddity</h2>
@@ -55,11 +54,10 @@
       <h5>your opinions matter .</h5>
    </div>
   <div class="card mx-auto" style="width: 29rem;">
-    <img src="logo.jpg" class="card-ing-top rounded float-start animate__animated animate__backInUp" alt="saddity logo"> 
+    <img src="another.jpg" class="card-ing-top rounded float-start animate__animated animate__backInUp" alt="saddity logo"> 
 </div>
 <br>
 <div class="card w-50 mx-auto">
-  <div>
   <div class="card-body">
     <section class="card-title wow animate animate__rotateIn">
       <h5>ABOUT US</h5>
@@ -67,7 +65,6 @@
   </div>
     <p class="card-text">This website will allow you to know the lastest fashion trends and other opinions on the trend for any particular brand. You will also be updated for a any new clothing drops and the increase and drecrease of prices.</p> 
    <i class="fa fa-hand-peace-o" style="font-size: 30px;"></i>
-  </section>
 </div>
 </body>
 </html>
