--- a/comments.html
+++ b/comments.html
@@ -46,9 +46,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
   <h2 class="text-center animate__animated animate__tada">COMMENT SECTION</h2>
   <br>
-  <p class="text-center">Here is were you comment you opinions! In the comments area please remember to specify the brand your are talking about!
+  <p class="text-center">Here is where you comment your opinions! In the comments area please remember to specify the brand your are talking about!
   </p>
-  <div class="col-lg-4 col-sm-4">
+  <div class="col-lg-6 col-sm-4">
     <label for="firstName" class="form-label">First name</label>
     <input type="text" class="form-control" id="firstName" placeholder="John" value="" required>
     <div class="invalid-feedback">
@@ -56,7 +56,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </div>
   </div>
 
-  <div class="col-lg-4 col-sm-4">
+  <div class="col-lg-6 col-sm-4"></div>
     <label for="lastName" class="form-label">Last name</label>
     <input type="text" class="form-control" id="lastName" placeholder="Doe" value="" required>
     <div class="invalid-feedback">
