--- a/blog.html
+++ b/blog.html
@@ -309,9 +309,16 @@
           <hr>
         </div>
       </div>
-    <div class="card text-center mx-auto round float-end" style="width: 18rem;">
+    <div class="card text-center" style="width: 18rem;">
       <img src="yellow.jpg" class="wow animate__slideInRight" alt="Air Jordan 4 Retro'Thunder'2023">
       <div class="card-body">
       </div>
-        <p>Colorway:Black/Tour Yellow<br>Release Date:May 13,2023<br>Price:$210</p><hr>
+        <p class="text-warning">Colorway:Black/Tour Yellow<br>Release Date:May 13,2023<br>Price:$210</p><hr>
+        </div>
+        <div class="card text-center" style="width: 18rem;">
+          <img src="green.jpg" class="wow animate__slideInLeft" alt="Air Jordan 1 Retro High OG Lucky Green">
+          <div class="card-body">
+            <p class="card-text text-success">Colorway: White/Lucky Green-Varsity Red-Cement Grey-Sail<br>Release Date:May 18,2023<br>Price:$200</p>
+            <hr>
+          </div>
 </html>
