--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,7 @@ method="post">
   </p>
   </form>
   <a href="mailto:cbeckford2@brooklynsteamcenter.org">
-    email
-    <i class="fa fa-envelope-square" style="font-size:60px;color:#7A95FF;">
+    <i id="mail" class="fa fa-envelope-square" style="font-size:60px;color:#7A95FF;">
       </i>
       </a>
 </body>
